# sorted

./: .env.example  .gitignore  CLAUDE.md  README.md  Todo Spec-Driven Development.txt  docker-compose.yml  pyproject.toml
.specify/memory/: constitution.md
apps/web/: .dockerignore  .env.example  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
apps/web/landing-page-brainstorming/: code_for_landing_page_2.txt
docs/plans/: 2026-02-07-sorted-universe-ui-design.md
scripts/: deploy-hf.sh
services/api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
services/api/src/api/: config.py  database.py  main.py
services/api/src/api/agent/: __init__.py  context.py  guardrails.py  jett.py  tools.py
services/api/src/api/auth/: __init__.py  dependencies.py  jwt.py
services/api/src/api/models/: __init__.py  chat.py  task.py  types.py  user.py
services/api/src/api/routers/: chat.py  tasks.py
services/api/src/api/schemas/: __init__.py  chat.py  task.py
services/api/tests/: __init__.py  conftest.py  test_agent_tools.py  test_chat.py  test_tasks.py
specs/001-console-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-web-scaffold/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-project-restructure/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-database-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-task-crud-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-frontend-task-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-sorted-universe-landing-and-app-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-ai-todo-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-futuristic-ui-revamp/: spec.md
src/: main.py
src/cli/: commands.py  parser.py
src/lib/: display.py
src/models/: task.py
src/services/: task_service.py
(+149 files in other folders)
