[project]
name = "sorted"
version = "0.1.0"
description = "A todo app that takes your clutter and sort it into todos"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.urls]
Homepage = "https://github.com/yourusername/sorted"
Repository = "https://github.com/yourusername/sorted"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py313"
extend-select = ["I", "RUF100"]
extend-exclude = ["tests/"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-config --strict-markers"

[tool.coverage.run]
source = ["src"]
omit = ["**/tests/*"]

[tool.coverage.paths]
source = ["src"]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
files = ["src/**/*.py"]
show_error_codes = true
disallow_untyped_defs = true
ignore_missing_imports = false
namespace_packages = true
explicit_package_bases = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
