[project]
name = "sorted-api"
version = "0.1.0"
description = "FastAPI backend for sorted todo application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.6.0",
    "pyjwt[crypto]>=2.8.0",
]
